[tool.poetry]
name = "mads-sem1"
version = "0.1.0"
description = "notebooks for the 1st semester of the HAN Master of Applied Datascience"
authors = ["Raoul Grouls <Raoul.Grouls@han.nl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mads_sem1"}]

[tool.poetry.dependencies]
python = "3.9.16"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
numpy = "^1.25.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
mads-datasets = {version = "^0.1.5.3", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
